<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settigs_block">
        <!-- Existing preferences -->
        <SwitchPreferenceCompat
            android:key="photos"
            app:summaryOff="@string/block_media_off"
            app:summaryOn="@string/block_media_on"
            app:title="@string/photos_title" />
        <SwitchPreferenceCompat
            android:key="news"
            app:summaryOff="@string/block_news_off"
            app:summaryOn="@string/block_news_on"
            app:title="@string/news_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settigs_general">
        <!-- Existing preferences -->
        <SwitchPreferenceCompat
            android:key="URL"
            app:summaryOff="@string/show_url_off"
            app:summaryOn="@string/show_url_on"
            app:title="@string/url_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/url_management">
        <Preference
            app:key="manage_urls"
            app:title="@string/url_management_title"
            app:summary="Add, remove, or import approved URLs" />
    </PreferenceCategory>

    <!-- Add this new category and preference -->
    <PreferenceCategory app:title="@string/security_settings">
        <SwitchPreferenceCompat
            app:key="lock_settings"
            app:title="@string/lock_settings_title"
            app:summaryOff="@string/lock_settings_summary_off"
            app:summaryOn="@string/lock_settings_summary_on" />
    </PreferenceCategory>
    <!-- End of new section -->


    <PreferenceCategory app:title="@string/info">
        <!-- Existing preferences -->
        <Preference
            android:key="Version"
            android:title="@string/name_ver"
            android:summary="@string/app_ver"
            android:selectable="false" />
        <Preference
            android:key="Contatact"
            android:title="@string/contcat"
            android:summary="@string/contact_info"
            android:selectable="false" />
    </PreferenceCategory>

</PreferenceScreen>